#16 fix added: avoid breaking up the podcast section. Caveat, the top of the title box has a negative margin and therefore results in the fact that it's top border is shown on the previous page. It can be fixed by adding a float:left attribute, but that causes the text to wrap around the section in a very narrow column, which is hard to read. So I've accepted the top border on the previous page.

--- a/book/theme/epub/epub3.css
+++ b/book/theme/epub/epub3.css
@@ -838,14 +838,12 @@ aside.sidebar {
     margin-top: 1em;
 }
 
-/*
 aside.sidebar {
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  float: left;
-  margin-bottom: 1em;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    -webkit-margin-top-collapse: separate;
+    margin-bottom: 1em;
 }
-*/
 
 figure.image {
     -webkit-column-break-inside: avoid;
